fix: hard to see hover background on alt voting layout

--- a/resources/less/forum/alternateLayout.less
+++ b/resources/less/forum/alternateLayout.less
@@ -34,6 +34,8 @@
 
   left: 0;
 
+  background: @body-bg;
+
   border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 0px 0.5px,
     rgba(0, 0, 0, 0.1) 0px 1px 4px 0px;
